Fixing padding on mobile devices

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -70,6 +70,12 @@ div.pokedex {
     border-radius: 20px;
 }
 
+.header-subtitle {
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+
 .close-btn {
     position: absolute;
     top: 0px;
